Sun Oct 10 06:11:05 GMT 2010  Olly Betts <olly@survex.com>

	* tests/api_unicode.cc: Improve test coverage for
	  Utf8Iterator::calculate_sequence_length().

Sun Oct 10 00:33:49 GMT 2010  Olly Betts <olly@survex.com>

	* tests/api_unicode.cc: Tweak testcase utf8iterator2 to add coverage
	  for Utf8Iterator(const char *).

Fri Oct 08 13:10:08 GMT 2010  Olly Betts <olly@survex.com>

	* matcher/selectpostlist.cc,matcher/selectpostlist.h: Implement
	  SelectPostList::check() so that check() on OP_NEAR and OP_PHRASE
	  subqueries won't end up checking potentially huge numbers of
	  documents.

Fri Oct 08 12:29:50 GMT 2010  Olly Betts <olly@survex.com>

	* tests/api_backend.cc: Add testcase phrase3 to provide coverage for
	  SelectPostList::skip_to().

Fri Oct 08 10:36:18 GMT 2010  Olly Betts <olly@survex.com>

	* matcher/orpostlist.cc,matcher/orpostlist.h: Fix performance
	  regression in some cases caused by the introduction of
	  OrPostList::check().

Thu Oct 07 03:53:11 GMT 2010  Olly Betts <olly@survex.com>

	* tests/api_anydb.cc: Clear tout before each iteration in scaleweight1.

Wed Oct 06 14:30:34 GMT 2010  Olly Betts <olly@survex.com>

	* NEWS: Update from 1.0.22 and ChangeLog.

Wed Oct 06 12:39:36 GMT 2010  Olly Betts <olly@survex.com>

	* tests/queryparsertest.cc: Add two more testcases for having a phrase
	  generator between prefix and term.

Wed Oct 06 12:37:32 GMT 2010  Olly Betts <olly@survex.com>

	* include/xapian/matchspy.h,include/xapian/postingsource.h: Remove
	  "experimental" marker from PostingSource and ValueCountMatchSpy.

Wed Oct 06 12:31:01 GMT 2010  Olly Betts <olly@survex.com>

	* docs/index.html: Add links to replication and facets documents, and
	  fix typo in serialistion document link.

Wed Oct 06 12:12:51 GMT 2010  Olly Betts <olly@survex.com>

	* docs/Makefile.am,docs/categorisation.rst,docs/facets.rst: Change the
	  categorisation document to talk about facets, since that's the